--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,18 @@
 body {
     text-align: center;
     font-family: arial;
-    color: deeppink;
+    color: #333;
+
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1 {
+    font-size: 20px;
 }
