Conflicto solucionado. Comando Save

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,12 +1,7 @@
 body {
     text-align: center;
     font-family: Arial;
-<<<<<<< HEAD
-    color:blue;
-=======
-    color: red;
->>>>>>> cabecera
-
+    color: #333;
  }
 
 #cabecera 
