--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,7 +1,13 @@
 body {
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: Arial;
-    color: #333;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    
+    
  }
 
 #cabecera 
@@ -13,6 +19,12 @@ body {
     margin: 0;
     padding: 0.5em; 
 
+}
+
+#cabecera #logo
+{
+    width: 50px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline { 
@@ -33,5 +45,6 @@ body {
 }
 
 #post {
+    background: #eaeaea;
     padding: 1em;
 }
